selfhost/test/parser/import_error_list_no_module_eof.out
Error at %FILE_NAME%:1:14
Unexpected end of file:
  |  import a, b from
                  ^